==> RIT-Landsat-Field-Radiometers/Shared-utils/shared/bsp/CANOpenNode/CO_driver_stm32.cpp <==
#include "301/CO_driver.h"
#include "can.h"
#include "main.h"
#include "CANopen.h"

void CO_CANsetNormalMode(CO_CANmodule_t *CANmodule)
{
	/* Put CAN module in normal mode */
	if (HAL_CAN_Start((CAN_HandleTypeDef*) CANmodule->CANptr) != HAL_OK)
	{
		/* Start Error */
	}
	if (HAL_CAN_ActivateNotification((CAN_HandleTypeDef*) CANmodule->CANptr,
	CAN_IT_RX_FIFO0_MSG_PENDING |
	CAN_IT_RX_FIFO1_MSG_PENDING |
	CAN_IT_TX_MAILBOX_EMPTY) != HAL_OK)
	{
		/* Notification Error */
	}

	CANmodule->CANnormal = true;
}

CO_ReturnError_t CO_CANmodule_init(CO_CANmodule_t *CANmodule, void *CANptr,
		CO_CANrx_t rxArray[], uint16_t rxSize, CO_CANtx_t txArray[],
		uint16_t txSize, uint16_t CANbitRate)
{
	uint16_t i;

	/* verify arguments */
	if (CANmodule == NULL || rxArray == NULL || txArray == NULL)
	{
		return CO_ERROR_ILLEGAL_ARGUMENT;
	}

	ISR_CANModule_handle = CANmodule;

	/* Configure object variables */
	CANmodule->CANptr = CANptr;
	CANmodule->rxArray = rxArray;
	CANmodule->rxSize = rxSize;
	CANmodule->txArray = txArray;
	CANmodule->txSize = txSize;
	CANmodule->CANerrorStatus = 0;
	CANmodule->CANnormal = false;
	CANmodule->useCANrxFilters = false; //(rxSize <= 32U) ? true : false;/* microcontroller dependent */
	CANmodule->bufferInhibitFlag = false;
	CANmodule->firstCANtxMessage = true;
	CANmodule->CANtxCount = 0U;
	CANmodule->errOld = 0U;

	for (i = 0U; i < rxSize; i++)
	{
		rxArray[i].ident = 0U;
		rxArray[i].mask = 0xFFFFU;
		rxArray[i].object = NULL;
		rxArray[i].CANrx_callback = NULL;
	}
	for (i = 0U; i < txSize; i++)
	{
		txArray[i].bufferFull = false;
	}

	/* Configure CAN module registers */
	CO_CANmodule_disable(CANmodule);
	HAL_CAN_MspDeInit((CAN_HandleTypeDef*) CANmodule->CANptr);
	HAL_CAN_MspInit((CAN_HandleTypeDef*) CANmodule->CANptr); /* NVIC and GPIO */

	/* Configure CAN timing */
	MX_CAN1_Init();

	/* Configure CAN module hardware filters */
	CAN_FilterTypeDef can1_filter_init;

	can1_filter_init.FilterActivation = ENABLE;
	can1_filter_init.FilterBank  = 0;
	can1_filter_init.FilterFIFOAssignment = CAN_RX_FIFO0;
	can1_filter_init.FilterIdHigh = 0x0000;
	can1_filter_init.FilterIdLow = 0x0000;
	can1_filter_init.FilterMaskIdHigh = 0x0000;
	can1_filter_init.FilterMaskIdLow = 0x0000;
	can1_filter_init.FilterMode = CAN_FILTERMODE_IDMASK;
	can1_filter_init.FilterScale = CAN_FILTERSCALE_32BIT;

	if( HAL_CAN_ConfigFilter((CAN_HandleTypeDef*) CANmodule->CANptr,&can1_filter_init) != HAL_OK)
	{
		Error_Handler();
	}

	/* configure CAN interrupt registers */
	if (HAL_CAN_ActivateNotification((CAN_HandleTypeDef*) CANmodule->CANptr,
	CAN_IT_RX_FIFO0_MSG_PENDING |
	CAN_IT_RX_FIFO1_MSG_PENDING |
	CAN_IT_TX_MAILBOX_EMPTY) != HAL_OK)
	{
		/* Notification Error */
	}

	return CO_ERROR_NO;
}

CO_ReturnError_t CO_CANsend(CO_CANmodule_t *CANmodule, CO_CANtx_t *buffer)
{
	CO_ReturnError_t err = CO_ERROR_NO;

	/* Verify overflow */
	if (buffer->bufferFull)
	{
		if (!CANmodule->firstCANtxMessage)
		{
			/* don't set error, if bootup message is still on buffers */
			CANmodule->CANerrorStatus |= CO_CAN_ERRTX_OVERFLOW;
		}
		err = CO_ERROR_TX_OVERFLOW;
	}

	CO_LOCK_CAN_SEND(CANmodule);

	uint32_t TxMailboxNum;
	CAN_TxHeaderTypeDef TxHeader;

	TxHeader.ExtId = 0u;
	TxHeader.IDE = 0;
	TxHeader.DLC = buffer->DLC;
	TxHeader.StdId = ( buffer->ident >> 2 );
	TxHeader.RTR = ( buffer->ident & 0x2 );


	/* if CAN TX buffer is free, copy message to it */
	if ((HAL_CAN_GetTxMailboxesFreeLevel((CAN_HandleTypeDef*) CANmodule->CANptr) > 0 )
			&& CANmodule->CANtxCount == 0)
	{
		CANmodule->bufferInhibitFlag = buffer->syncFlag;
		/* copy message and txRequest */
		if(HAL_CAN_AddTxMessage((CAN_HandleTypeDef*) CANmodule->CANptr, &TxHeader, &buffer->data[0], &TxMailboxNum) != HAL_OK)
		{
			err = CO_ERROR_SYSCALL;
		}
	}
	/* if no buffer is free, message will be sent by interrupt */
	else
	{
		buffer->bufferFull = true;
		CANmodule->CANtxCount++;
	}
	CO_UNLOCK_CAN_SEND(CANmodule);

	return err;
}
